--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 18:01+0200\n"
+"POT-Creation-Date: 2023-04-18 22:49+0200\n"
 "PO-Revision-Date: 2023-04-17 12:21+0000\n"
 "Last-Translator: Nikolay <nick.postnikov@gmail.com>\n"
 "Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
@@ -20,8 +20,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || ("
-"n%100>=11 && n%100<=14)? 2 : 3);\n"
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
 "X-Generator: Weblate 4.16.4\n"
 
 #: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
@@ -114,7 +114,7 @@ msgstr "Срок действия ссылки в минутах"
 msgid "Expiry time in minutes"
 msgstr "Срок действия в минутах"
 
-#: helper/time.py:103
+#: helper/time.py:104
 msgid ""
 "{int(duration_years[0])} years, {int(duration_days[0])} days, "
 "{int(duration_hours[0])} hours, {int(duration_minutes[0])} minutes and "
@@ -621,6 +621,10 @@ msgid_plural ""
 msgstr[0] ""
 "В настоящее время активно ESI отслеживание флотов следующих пилотов:"
 msgstr[1] ""
+"В настоящее время активно ESI отслеживание флотов следующих пилотов:"
+msgstr[2] ""
+"В настоящее время активно ESI отслеживание флотов следующих пилотов:"
+msgstr[3] ""
 "В настоящее время активно ESI отслеживание флотов следующих пилотов:"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:25
@@ -1172,11 +1176,11 @@ msgstr ""
 "<h4>Ошибка!</h4><p>Предоставленный hash не соответствует никакой Записи УБВ."
 "</p>"
 
-#: views/fatlinks.py:1061 views/fatlinks.py:1060
+#: views/fatlinks.py:1061
 msgid "<h4>Success!</h4><p>The FAT link has been successfully re-opened.</p>"
 msgstr "<h4>Успех!</h4><p>Запись УБВ успешно реактивирована.</p>"
 
-#: views/fatlinks.py:1071 views/fatlinks.py:1070
+#: views/fatlinks.py:1071
 msgid ""
 "<h4>Warning!</h4><p>This FAT link has already been re-opened. FAT links can "
 "be re-opened only once!</p>"
@@ -1232,6 +1236,6 @@ msgstr ""
 msgid "Sunday"
 msgstr ""
 
-#: views/statistics.py:557 views/statistics.py:549
+#: views/statistics.py:557
 msgid "<h4>Error!</h4><p>Date information incomplete.</p>"
 msgstr "<h4>Ошибка!</h4><p>Информация о дате неполная.</p>"
