--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -20,9 +20,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || ("
-"n%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Weblate 4.16.4\n"
 
 #: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
@@ -624,8 +622,6 @@ msgstr[0] ""
 msgstr[1] ""
 "В настоящее время активно ESI отслеживание флотов следующих пилотов:"
 msgstr[2] ""
-"В настоящее время активно ESI отслеживание флотов следующих пилотов:"
-msgstr[3] ""
 "В настоящее время активно ESI отслеживание флотов следующих пилотов:"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:25
