--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 18:01+0200\n"
+"POT-Creation-Date: 2023-04-19 14:34+0200\n"
 "PO-Revision-Date: 2023-04-17 16:11+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
-"Language-Team: German <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/de/>\n"
+"Language-Team: German <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -112,7 +112,7 @@ msgstr "FAT Link Ablaufzeit in Minuten"
 msgid "Expiry time in minutes"
 msgstr "Ablaufzeit in Minuten"
 
-#: helper/time.py:103
+#: helper/time.py:104
 msgid ""
 "{int(duration_years[0])} years, {int(duration_days[0])} days, "
 "{int(duration_hours[0])} hours, {int(duration_minutes[0])} minutes and "
@@ -545,7 +545,7 @@ msgid "Copy me!"
 msgstr "Kopier mich!"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:92
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:57
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:63
 #: templates/afat/view/dashboard/dashboard.html:26
 #: templates/afat/view/fatlinks/fatlinks_overview.html:50
 msgid "Close ESI Fleet Tracking"
@@ -613,11 +613,21 @@ msgid "FATs have been automatically tracked via ESI"
 msgstr "FATs wurden automatisch via ESI verfolgt"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:7
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "                You currently have an active ESI fleet under the "
+#| "following character:\n"
+#| "            "
+#| msgid_plural ""
+#| "\n"
+#| "                You currently have %(open_esi_fleets)s active ESI fleets "
+#| "under the following characters:\n"
+#| "            "
 msgid ""
 "\n"
-"                You currently have an active ESI fleet under the following "
-"character:\n"
+"                You currently have %(open_esi_fleets)s active ESI fleet "
+"under the following character:\n"
 "            "
 msgid_plural ""
 "\n"
@@ -645,13 +655,29 @@ msgstr "ESI Flotten ID:"
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:49
 msgid ""
-"These fleets are already automatically tracked. However, you can still open "
-"more fleets with other alts, if that&apos;s what you like to do."
+"\n"
+"                This fleet is already automatically tracked.\n"
+"            "
+msgid_plural ""
+"\n"
+"                These fleets are already automatically tracked.\n"
+"            "
+msgstr[0] ""
+msgstr[1] ""
+
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:55
+#, fuzzy
+#| msgid ""
+#| "These fleets are already automatically tracked. However, you can still "
+#| "open more fleets with other alts, if that&apos;s what you like to do."
+msgid ""
+"However, you can still open more fleets with other alts, if that&apos;s what "
+"you like to do."
 msgstr ""
 "Diese Flotten werden bereits automatisch verfolgt. Du kannst jedoch weitere "
 "Flotten mit Deinem Alts starten, wenn Du möchtest."
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:53
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:59
 msgid ""
 "Note: Information about your registered fleets might be delayed by up to 5 "
 "minutes."
@@ -1189,11 +1215,11 @@ msgstr ""
 "<h4>Fehler!</h4><p>Der zur Verfügung gestellt Hash passt zu keinem FAT Link."
 "</p>"
 
-#: views/fatlinks.py:1061 views/fatlinks.py:1060
+#: views/fatlinks.py:1061
 msgid "<h4>Success!</h4><p>The FAT link has been successfully re-opened.</p>"
 msgstr "<h4>Erfolg!</h4><p>Der FAT Link wurde erfolgreich wieder geöffnet.</p>"
 
-#: views/fatlinks.py:1071 views/fatlinks.py:1070
+#: views/fatlinks.py:1071
 msgid ""
 "<h4>Warning!</h4><p>This FAT link has already been re-opened. FAT links can "
 "be re-opened only once!</p>"
@@ -1249,6 +1275,6 @@ msgstr "Samstag"
 msgid "Sunday"
 msgstr "Sonntag"
 
-#: views/statistics.py:557 views/statistics.py:549
+#: views/statistics.py:557
 msgid "<h4>Error!</h4><p>Date information incomplete.</p>"
 msgstr "<h4>Fehler!</h4><p>Datumsinformationen nicht komplett.</p>"
