--- a/afat/locale/es/LC_MESSAGES/django.po
+++ b/afat/locale/es/LC_MESSAGES/django.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-17 18:01+0200\n"
+"POT-Creation-Date: 2023-04-19 14:34+0200\n"
 "PO-Revision-Date: 2023-04-19 08:19+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
-"Language-Team: Spanish <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/es/>\n"
+"Language-Team: Spanish <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -108,7 +108,7 @@ msgstr ""
 msgid "Expiry time in minutes"
 msgstr ""
 
-#: helper/time.py:103
+#: helper/time.py:104
 msgid ""
 "{int(duration_years[0])} years, {int(duration_days[0])} days, "
 "{int(duration_hours[0])} hours, {int(duration_minutes[0])} minutes and "
@@ -509,7 +509,7 @@ msgid "Copy me!"
 msgstr ""
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:92
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:57
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:63
 #: templates/afat/view/dashboard/dashboard.html:26
 #: templates/afat/view/fatlinks/fatlinks_overview.html:50
 msgid "Close ESI Fleet Tracking"
@@ -577,8 +577,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"                You currently have an active ESI fleet under the following "
-"character:\n"
+"                You currently have %(open_esi_fleets)s active ESI fleet "
+"under the following character:\n"
 "            "
 msgid_plural ""
 "\n"
@@ -598,11 +598,23 @@ msgstr ""
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:49
 msgid ""
-"These fleets are already automatically tracked. However, you can still open "
-"more fleets with other alts, if that&apos;s what you like to do."
+"\n"
+"                This fleet is already automatically tracked.\n"
+"            "
+msgid_plural ""
+"\n"
+"                These fleets are already automatically tracked.\n"
+"            "
+msgstr[0] ""
+msgstr[1] ""
+
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:55
+msgid ""
+"However, you can still open more fleets with other alts, if that&apos;s what "
+"you like to do."
 msgstr ""
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:53
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:59
 msgid ""
 "Note: Information about your registered fleets might be delayed by up to 5 "
 "minutes."
