--- a/afat/locale/uk/LC_MESSAGES/django.po
+++ b/afat/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 01:35+0200\n"
+"POT-Creation-Date: 2023-04-19 14:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,7 +16,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
 #: templates/afat/partials/dashboard/tabs/fats.html:41
@@ -509,7 +510,7 @@ msgid "Copy me!"
 msgstr ""
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:92
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:57
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:63
 #: templates/afat/view/dashboard/dashboard.html:26
 #: templates/afat/view/fatlinks/fatlinks_overview.html:50
 msgid "Close ESI Fleet Tracking"
@@ -577,8 +578,8 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"                You currently have an active ESI fleet under the following "
-"character:\n"
+"                You currently have %(open_esi_fleets)s active ESI fleet "
+"under the following character:\n"
 "            "
 msgid_plural ""
 "\n"
@@ -587,6 +588,7 @@ msgid_plural ""
 "            "
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:25
 msgid "Fleet Name:"
@@ -598,11 +600,24 @@ msgstr ""
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:49
 msgid ""
-"These fleets are already automatically tracked. However, you can still open "
-"more fleets with other alts, if that&apos;s what you like to do."
+"\n"
+"                This fleet is already automatically tracked.\n"
+"            "
+msgid_plural ""
+"\n"
+"                These fleets are already automatically tracked.\n"
+"            "
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:55
+msgid ""
+"However, you can still open more fleets with other alts, if that&apos;s what "
+"you like to do."
 msgstr ""
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:53
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:59
 msgid ""
 "Note: Information about your registered fleets might be delayed by up to 5 "
 "minutes."
