--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -20,8 +20,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural= n==1 ? 3 : (n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Weblate 4.16.4\n"
 
 #: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
@@ -632,6 +632,11 @@ msgstr[1] ""
 "следующих пилотов:\n"
 "            "
 msgstr[2] ""
+"\n"
+"                У Вас %(open_esi_fleets)s активных ESI флотов под "
+"управлением следующих пилотов:\n"
+"            "
+msgstr[3] ""
 "\n"
 "                У Вас %(open_esi_fleets)s активных ESI флотов под "
 "управлением следующих пилотов:\n"
