--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 15:06+0200\n"
+"POT-Creation-Date: 2023-04-19 19:20+0200\n"
 "PO-Revision-Date: 2023-04-19 13:35+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
-"Language-Team: German <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/de/>\n"
+"Language-Team: German <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -643,13 +643,23 @@ msgstr "Flottenname:"
 msgid "ESI fleet ID:"
 msgstr "ESI Flotten ID:"
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:50
-msgid "This fleet is already automatically tracked."
-msgstr "Diese Flotte wird bereits automatisch verfolgt."
-
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:52
-msgid "These fleets are already automatically tracked."
-msgstr "Diese Flotten werden bereits automatisch verfolgt."
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:49
+msgid ""
+"\n"
+"                This fleet is already automatically tracked.\n"
+"            "
+msgid_plural ""
+"\n"
+"                These fleets are already automatically tracked.\n"
+"            "
+msgstr[0] ""
+"\n"
+"                Diese Flotte wird bereits automatisch verfolgt.\n"
+"            "
+msgstr[1] ""
+"\n"
+"                Diese Flotten werden bereits automatisch verfolgt.\n"
+"            "
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:55
 msgid ""
@@ -1260,20 +1270,8 @@ msgstr "Sonntag"
 msgid "<h4>Error!</h4><p>Date information incomplete.</p>"
 msgstr "<h4>Fehler!</h4><p>Datumsinformationen nicht komplett.</p>"
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:49
-msgid ""
-"\n"
-"                This fleet is already automatically tracked.\n"
-"            "
-msgid_plural ""
-"\n"
-"                These fleets are already automatically tracked.\n"
-"            "
-msgstr[0] ""
-"\n"
-"                Diese Flotte wird bereits automatisch verfolgt.\n"
-"            "
-msgstr[1] ""
-"\n"
-"                Diese Flotten werden bereits automatisch verfolgt.\n"
-"            "
+#~ msgid "This fleet is already automatically tracked."
+#~ msgstr "Diese Flotte wird bereits automatisch verfolgt."
+
+#~ msgid "These fleets are already automatically tracked."
+#~ msgstr "Diese Flotten werden bereits automatisch verfolgt."
