--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,17 +11,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 15:06+0200\n"
+"POT-Creation-Date: 2023-04-19 19:20+0200\n"
 "PO-Revision-Date: 2023-04-19 16:55+0000\n"
 "Last-Translator: Nikolay <nick.postnikov@gmail.com>\n"
-"Language-Team: Russian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/ru/>\n"
+"Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural= n==1 ? 3 : (n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural= n==1 ? 3 : (n%10==1 && n%100!=11 ? 0 : "
+"n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Weblate 4.16.4\n"
 
 #: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
@@ -650,13 +650,21 @@ msgstr "Название флота:"
 msgid "ESI fleet ID:"
 msgstr "ESI ID флота:"
 
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:50
-msgid "This fleet is already automatically tracked."
-msgstr "Этот флот отслеживается автоматически."
-
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:52
-msgid "These fleets are already automatically tracked."
-msgstr "Эти флоты отслеживаются автоматически."
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:49
+#, fuzzy
+#| msgid "This fleet is already automatically tracked."
+msgid ""
+"\n"
+"                This fleet is already automatically tracked.\n"
+"            "
+msgid_plural ""
+"\n"
+"                These fleets are already automatically tracked.\n"
+"            "
+msgstr[0] "Этот флот отслеживается автоматически."
+msgstr[1] "Этот флот отслеживается автоматически."
+msgstr[2] "Этот флот отслеживается автоматически."
+msgstr[3] "Этот флот отслеживается автоматически."
 
 #: templates/afat/partials/fatlinks/open_esi_fleets.html:55
 msgid ""
@@ -1262,3 +1270,6 @@ msgstr "Воскресенье"
 #: views/statistics.py:557
 msgid "<h4>Error!</h4><p>Date information incomplete.</p>"
 msgstr "<h4>Ошибка!</h4><p>Информация о дате неполная.</p>"
+
+#~ msgid "These fleets are already automatically tracked."
+#~ msgstr "Эти флоты отслеживаются автоматически."
