--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-26 20:52+0200\n"
+"POT-Creation-Date: 2023-05-13 13:15+0200\n"
 "PO-Revision-Date: 2023-04-27 19:50+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
-"Language-Team: German <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/de/>\n"
+"Language-Team: German <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,44 +22,60 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 4.17\n"
 
-#: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
+#: admin.py:147 templates/afat/partials/dashboard/tabs/fatlinks.html:13
 #: templates/afat/partials/dashboard/tabs/fats.html:41
 #: templates/afat/partials/statistics/character/tabs/raw_data.html:11
 #: templates/afat/view/fatlinks/fatlinks_overview.html:26
 msgid "Fleet Type"
 msgstr "Flottenart"
 
-#: admin.py:158
+#: admin.py:159
 msgid "Is Enabled"
 msgstr "Ist aktiviert"
 
-#: admin.py:172
-msgid "Activate selected fleet type(s)"
+#: admin.py:173
+#, fuzzy
+#| msgid "Activate selected fleet type(s)"
+msgid "Activate selected fleet types"
 msgstr "Aktiviere ausgewählte Flottenart(en)"
 
-#: admin.py:197
-#, python-brace-format
-msgid "Failed to activate {failed} fleet types"
-msgstr "Aktivieren von {failed} Flottenart(en) ist fehlgeschlagen"
-
 #: admin.py:201
-#, python-brace-format
-msgid "Activated {notifications_count} fleet type(s)"
-msgstr "{notifications_count} Flottenart(en) aktiviert"
+#, fuzzy, python-brace-format
+#| msgid "Failed to activate {failed} fleet types"
+msgid "Failed to activate {failed} fleet type"
+msgid_plural "Failed to activate {failed} fleet types"
+msgstr[0] "Aktivieren von {failed} Flottenart(en) ist fehlgeschlagen"
+msgstr[1] "Aktivieren von {failed} Flottenart(en) ist fehlgeschlagen"
 
-#: admin.py:204
-msgid "Deactivate selected fleet type(s)"
+#: admin.py:211
+#, fuzzy, python-brace-format
+#| msgid "Activated {notifications_count} fleet type(s)"
+msgid "Activated {notifications_count} fleet type"
+msgid_plural "Activated {notifications_count} fleet types"
+msgstr[0] "{notifications_count} Flottenart(en) aktiviert"
+msgstr[1] "{notifications_count} Flottenart(en) aktiviert"
+
+#: admin.py:217
+#, fuzzy
+#| msgid "Deactivate selected fleet type(s)"
+msgid "Deactivate selected fleet types"
 msgstr "Deaktiviere ausgewählte Flottenart(en)"
 
-#: admin.py:229
-#, python-brace-format
-msgid "Failed to deactivate {failed} fleet types"
-msgstr "Deaktivieren von {failed} Flottenart(en) ist fehlgeschlagen"
+#: admin.py:245
+#, fuzzy, python-brace-format
+#| msgid "Failed to deactivate {failed} fleet types"
+msgid "Failed to deactivate {failed} fleet type"
+msgid_plural "Failed to deactivate {failed} fleet types"
+msgstr[0] "Deaktivieren von {failed} Flottenart(en) ist fehlgeschlagen"
+msgstr[1] "Deaktivieren von {failed} Flottenart(en) ist fehlgeschlagen"
 
-#: admin.py:233
-#, python-brace-format
-msgid "Deactivated {notifications_count} fleet type(s)"
-msgstr "{notifications_count} Flottenart(en) deaktiviert"
+#: admin.py:255
+#, fuzzy, python-brace-format
+#| msgid "Deactivated {notifications_count} fleet type(s)"
+msgid "Deactivated {notifications_count} fleet type"
+msgid_plural "Deactivated {notifications_count} fleet type(s)"
+msgstr[0] "{notifications_count} Flottenart(en) deaktiviert"
+msgstr[1] "{notifications_count} Flottenart(en) deaktiviert"
 
 #: app_settings.py:32 templates/afat/partials/menu.html:14
 msgid "Fleet Activity Tracking"
