--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,11 +11,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-26 20:52+0200\n"
+"POT-Creation-Date: 2023-05-13 13:15+0200\n"
 "PO-Revision-Date: 2023-04-27 19:50+0000\n"
 "Last-Translator: \"H. Peter Pfeufer\" <info@ppfeufer.de>\n"
-"Language-Team: Russian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/ru/>\n"
+"Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,44 +24,68 @@ msgstr ""
 "n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Weblate 4.17\n"
 
-#: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
+#: admin.py:147 templates/afat/partials/dashboard/tabs/fatlinks.html:13
 #: templates/afat/partials/dashboard/tabs/fats.html:41
 #: templates/afat/partials/statistics/character/tabs/raw_data.html:11
 #: templates/afat/view/fatlinks/fatlinks_overview.html:26
 msgid "Fleet Type"
 msgstr "Тип флота"
 
-#: admin.py:158
+#: admin.py:159
 msgid "Is Enabled"
 msgstr "Разрешен"
 
-#: admin.py:172
-msgid "Activate selected fleet type(s)"
+#: admin.py:173
+#, fuzzy
+#| msgid "Activate selected fleet type(s)"
+msgid "Activate selected fleet types"
 msgstr "Разрешить выбранные типы флотов"
 
-#: admin.py:197
-#, python-brace-format
-msgid "Failed to activate {failed} fleet types"
-msgstr "Не удалось разрешить {failed} типов фота"
-
 #: admin.py:201
-#, python-brace-format
-msgid "Activated {notifications_count} fleet type(s)"
-msgstr "Разрешены {notifications_count} типы флотов"
+#, fuzzy, python-brace-format
+#| msgid "Failed to activate {failed} fleet types"
+msgid "Failed to activate {failed} fleet type"
+msgid_plural "Failed to activate {failed} fleet types"
+msgstr[0] "Не удалось разрешить {failed} типов фота"
+msgstr[1] "Не удалось разрешить {failed} типов фота"
+msgstr[2] "Не удалось разрешить {failed} типов фота"
+msgstr[3] "Не удалось разрешить {failed} типов фота"
 
-#: admin.py:204
-msgid "Deactivate selected fleet type(s)"
+#: admin.py:211
+#, fuzzy, python-brace-format
+#| msgid "Activated {notifications_count} fleet type(s)"
+msgid "Activated {notifications_count} fleet type"
+msgid_plural "Activated {notifications_count} fleet types"
+msgstr[0] "Разрешены {notifications_count} типы флотов"
+msgstr[1] "Разрешены {notifications_count} типы флотов"
+msgstr[2] "Разрешены {notifications_count} типы флотов"
+msgstr[3] "Разрешены {notifications_count} типы флотов"
+
+#: admin.py:217
+#, fuzzy
+#| msgid "Deactivate selected fleet type(s)"
+msgid "Deactivate selected fleet types"
 msgstr "Запретить выбранные типы флотов"
 
-#: admin.py:229
-#, python-brace-format
-msgid "Failed to deactivate {failed} fleet types"
-msgstr "Не удалось запретить {failed} типов флота"
+#: admin.py:245
+#, fuzzy, python-brace-format
+#| msgid "Failed to deactivate {failed} fleet types"
+msgid "Failed to deactivate {failed} fleet type"
+msgid_plural "Failed to deactivate {failed} fleet types"
+msgstr[0] "Не удалось запретить {failed} типов флота"
+msgstr[1] "Не удалось запретить {failed} типов флота"
+msgstr[2] "Не удалось запретить {failed} типов флота"
+msgstr[3] "Не удалось запретить {failed} типов флота"
 
-#: admin.py:233
-#, python-brace-format
-msgid "Deactivated {notifications_count} fleet type(s)"
-msgstr "Запрещены {notifications_count} типов флота"
+#: admin.py:255
+#, fuzzy, python-brace-format
+#| msgid "Deactivated {notifications_count} fleet type(s)"
+msgid "Deactivated {notifications_count} fleet type"
+msgid_plural "Deactivated {notifications_count} fleet type(s)"
+msgstr[0] "Запрещены {notifications_count} типов флота"
+msgstr[1] "Запрещены {notifications_count} типов флота"
+msgstr[2] "Запрещены {notifications_count} типов флота"
+msgstr[3] "Запрещены {notifications_count} типов флота"
 
 #: app_settings.py:32 templates/afat/partials/menu.html:14
 msgid "Fleet Activity Tracking"
