--- a/afat/locale/uk/LC_MESSAGES/django.po
+++ b/afat/locale/uk/LC_MESSAGES/django.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-26 20:52+0200\n"
+"POT-Creation-Date: 2023-05-13 13:15+0200\n"
 "PO-Revision-Date: 2023-05-12 20:50+0000\n"
 "Last-Translator: \"Andrii M.\" <elfleg0las88@gmail.com>\n"
-"Language-Team: Ukrainian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/uk/>\n"
+"Language-Team: Ukrainian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/uk/>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,44 +20,60 @@ msgstr ""
 "n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Weblate 4.17\n"
 
-#: admin.py:146 templates/afat/partials/dashboard/tabs/fatlinks.html:13
+#: admin.py:147 templates/afat/partials/dashboard/tabs/fatlinks.html:13
 #: templates/afat/partials/dashboard/tabs/fats.html:41
 #: templates/afat/partials/statistics/character/tabs/raw_data.html:11
 #: templates/afat/view/fatlinks/fatlinks_overview.html:26
 msgid "Fleet Type"
 msgstr "Тип флоту"
 
-#: admin.py:158
+#: admin.py:159
 msgid "Is Enabled"
 msgstr "Дозволено"
 
-#: admin.py:172
-msgid "Activate selected fleet type(s)"
-msgstr ""
-
-#: admin.py:197
-#, python-brace-format
-msgid "Failed to activate {failed} fleet types"
+#: admin.py:173
+msgid "Activate selected fleet types"
 msgstr ""
 
 #: admin.py:201
 #, python-brace-format
-msgid "Activated {notifications_count} fleet type(s)"
-msgstr ""
+msgid "Failed to activate {failed} fleet type"
+msgid_plural "Failed to activate {failed} fleet types"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
-#: admin.py:204
-msgid "Deactivate selected fleet type(s)"
-msgstr ""
-
-#: admin.py:229
+#: admin.py:211
 #, python-brace-format
-msgid "Failed to deactivate {failed} fleet types"
+msgid "Activated {notifications_count} fleet type"
+msgid_plural "Activated {notifications_count} fleet types"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
+
+#: admin.py:217
+msgid "Deactivate selected fleet types"
 msgstr ""
 
-#: admin.py:233
+#: admin.py:245
 #, python-brace-format
-msgid "Deactivated {notifications_count} fleet type(s)"
-msgstr ""
+msgid "Failed to deactivate {failed} fleet type"
+msgid_plural "Failed to deactivate {failed} fleet types"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
+
+#: admin.py:255
+#, python-brace-format
+msgid "Deactivated {notifications_count} fleet type"
+msgid_plural "Deactivated {notifications_count} fleet type(s)"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: app_settings.py:32 templates/afat/partials/menu.html:14
 msgid "Fleet Activity Tracking"
