--- a/afat/locale/de/LC_MESSAGES/django.po
+++ b/afat/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-22 16:01+0200\n"
+"POT-Creation-Date: 2023-09-22 17:57+0200\n"
 "PO-Revision-Date: 2023-09-22 15:47+0000\n"
 "Last-Translator: Peter Pfeufer <info@ppfeufer.de>\n"
-"Language-Team: German <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/de/>\n"
+"Language-Team: German <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -538,6 +538,7 @@ msgid "Re-Open"
 msgstr "Wieder öffnen"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:64
+#: templates/afat/partials/fatlinks/details/fatlink_info.html:97
 msgid "Re-open FAT link"
 msgstr "FAT-Link wieder öffnen"
 
@@ -550,14 +551,10 @@ msgid "Copy me!"
 msgstr "Kopier mich!"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:92
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:63
-msgid "Close ESI Fleet Tracking"
-msgstr "ESI Tracking beenden"
-
-#: templates/afat/partials/fatlinks/details/fatlink_info.html:97
-#, fuzzy
-msgid "Re-Open Fat Link"
-msgstr "FAT-Link wieder öffnen"
+#: templates/afat/view/dashboard/dashboard.html:32
+#: templates/afat/view/fatlinks/fatlinks_overview.html:57
+msgid "Close ESI fleet tracking"
+msgstr "ESI-Tracking beenden"
 
 #: templates/afat/partials/fatlinks/details/fatlink_name_form.html:14
 msgid "Set name"
@@ -565,7 +562,8 @@ msgstr "Name setzen"
 
 #: templates/afat/partials/fatlinks/details/tabs/fats.html:7
 msgid "FATs for this FAT link <small>(updated every 15 seconds)</small>"
-msgstr "FATs für diesen FAT-Link <small>(alle 15 Sekunden aktualisiert)</small>"
+msgstr ""
+"FATs für diesen FAT-Link <small>(alle 15 Sekunden aktualisiert)</small>"
 
 #: templates/afat/partials/fatlinks/details/tabs/fats.html:9
 msgid "FATs for this FAT link"
@@ -683,6 +681,10 @@ msgid ""
 msgstr ""
 "Hinweis: Informationen über registrierte Flotten können bis zu 5 Minuten "
 "verzögert sein."
+
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:63
+msgid "Close ESI Fleet Tracking"
+msgstr "ESI Tracking beenden"
 
 #: templates/afat/partials/footer/app-translation-footer.html:5
 msgid ""
@@ -884,11 +886,6 @@ msgstr "Kürzliche Aktivität"
 #: templates/afat/view/fatlinks/fatlinks_overview.html:54
 msgid "Delete FAT link"
 msgstr "FAT-Link löschen"
-
-#: templates/afat/view/dashboard/dashboard.html:32
-#: templates/afat/view/fatlinks/fatlinks_overview.html:57
-msgid "Close ESI fleet tracking"
-msgstr "ESI-Tracking beenden"
 
 #: templates/afat/view/dashboard/dashboard.html:58
 msgid "No recent FATs for"
@@ -1154,9 +1151,9 @@ msgid ""
 "p><p>Name: {character.character_name}<br>System: {afat_object.system}"
 "<br>Ship: {afat_object.shiptype}</p>"
 msgstr ""
-"<h4>Information</h4><p>Der Pilot ist bereits für diesen FAT-Link "
-"registriert.</p><p>Name: {character.character_name}<br>System: {afat_object."
-"system}<br>Schiff: {afat_object.shiptype}</p>"
+"<h4>Information</h4><p>Der Pilot ist bereits für diesen FAT-Link registriert."
+"</p><p>Name: {character.character_name}<br>System: {afat_object.system}"
+"<br>Schiff: {afat_object.shiptype}</p>"
 
 #: views/fatlinks.py:775
 msgid ""
