--- a/afat/locale/ru/LC_MESSAGES/django.po
+++ b/afat/locale/ru/LC_MESSAGES/django.po
@@ -11,11 +11,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-22 16:01+0200\n"
+"POT-Creation-Date: 2023-09-22 17:57+0200\n"
 "PO-Revision-Date: 2023-09-22 15:47+0000\n"
 "Last-Translator: Peter Pfeufer <info@ppfeufer.de>\n"
-"Language-Team: Russian <https://weblate.ppfeufer.de/projects/"
-"alliance-auth-apps/allianceauth-afat/ru/>\n"
+"Language-Team: Russian <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -599,6 +599,7 @@ msgid "Re-Open"
 msgstr "Реактивировать"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:64
+#: templates/afat/partials/fatlinks/details/fatlink_info.html:97
 #, fuzzy
 #| msgid "Re-Open FAT link"
 msgid "Re-open FAT link"
@@ -613,13 +614,12 @@ msgid "Copy me!"
 msgstr "Скопируй меня!"
 
 #: templates/afat/partials/fatlinks/details/fatlink_info.html:92
-#: templates/afat/partials/fatlinks/open_esi_fleets.html:63
-msgid "Close ESI Fleet Tracking"
+#: templates/afat/view/dashboard/dashboard.html:32
+#: templates/afat/view/fatlinks/fatlinks_overview.html:57
+#, fuzzy
+#| msgid "Close ESI Fleet Tracking"
+msgid "Close ESI fleet tracking"
 msgstr "Завершить ESI отслеживание"
-
-#: templates/afat/partials/fatlinks/details/fatlink_info.html:97
-msgid "Re-Open Fat Link"
-msgstr "Реактивировать ссылку РБВ"
 
 #: templates/afat/partials/fatlinks/details/fatlink_name_form.html:14
 #, fuzzy
@@ -774,6 +774,10 @@ msgid ""
 msgstr ""
 "Примечание: информация о Ваших зарегистрированных флотах может задерживаться "
 "до 5 минут."
+
+#: templates/afat/partials/fatlinks/open_esi_fleets.html:63
+msgid "Close ESI Fleet Tracking"
+msgstr "Завершить ESI отслеживание"
 
 #: templates/afat/partials/footer/app-translation-footer.html:5
 msgid ""
@@ -1016,13 +1020,6 @@ msgstr "Недавняя активность"
 #| msgid "Delete FAT Link"
 msgid "Delete FAT link"
 msgstr "Завершение Боевого Вылета"
-
-#: templates/afat/view/dashboard/dashboard.html:32
-#: templates/afat/view/fatlinks/fatlinks_overview.html:57
-#, fuzzy
-#| msgid "Close ESI Fleet Tracking"
-msgid "Close ESI fleet tracking"
-msgstr "Завершить ESI отслеживание"
 
 #: templates/afat/view/dashboard/dashboard.html:58
 msgid "No recent FATs for"
